---
source: crates/pgls_completions/src/test_helper.rs
expression: final_snapshot
snapshot_kind: text
---
***Setup***

create schema auth;

create table public.one (
    id serial primary key,
    a text,
    b text,
    z text
);

create table public.two (
    id serial primary key,
    c text,
    d text,
    e text
);


--------------

***Case 1:***

s| from public.one o join public.two on o.id = t.id;
select | from public.one o join public.two on o.id = t.id;

Results:
o.a - public.one.a (Column)
o.b - public.one.b (Column)
c - public.two.c (Column)
d - public.two.d (Column)
e - public.two.e (Column)

--------------

select o.| from public.one o join public.two on o.id = t.id;

Results:
a - public.one.a (Column)
b - public.one.b (Column)
id - public.one.id (Column)
z - public.one.z (Column)

--------------

select o.i| from public.one o join public.two on o.id = t.id;

Results:
id - public.one.id (Column)

--------------

select o.id, | from public.one o join public.two on o.id = t.id;

Results:
o.a - public.one.a (Column)
o.b - public.one.b (Column)
c - public.two.c (Column)
d - public.two.d (Column)
e - public.two.e (Column)

--------------

select o.id, a| from public.one o join public.two on o.id = t.id;

Results:
o.a - public.one.a (Column)
abbrev - pg_catalog.pg_timezone_abbrevs.abbrev (Column)
action_condition - information_schema.triggers.action_condition (Column)
action_order - information_schema.triggers.action_order (Column)
action_orientation - information_schema.triggers.action_orientation (Column)

--------------

select o.id, a, | from public.one o join public.two on o.id = t.id;
**Should have low priority for `a`, since it's already mentioned.**

Results:
o.b - public.one.b (Column)
c - public.two.c (Column)
d - public.two.d (Column)
e - public.two.e (Column)
id - public.two.id (Column)

--------------

select o.id, a, b| from public.one o join public.two on o.id = t.id;

Results:
o.b - public.one.b (Column)
backend_start - pg_catalog.pg_stat_activity.backend_start (Column)
backend_type - pg_catalog.pg_stat_activity.backend_type (Column)
backend_xid - pg_catalog.pg_stat_activity.backend_xid (Column)
backend_xmin - pg_catalog.pg_stat_activity.backend_xmin (Column)

--------------

select o.id, a, b, | from public.one o join public.two on o.id = t.id;

Results:
c - public.two.c (Column)
d - public.two.d (Column)
e - public.two.e (Column)
id - public.two.id (Column)
o.z - public.one.z (Column)

--------------

select o.id, a, b, c| from public.one o join public.two on o.id = t.id;

Results:
c - public.two.c (Column)
cache_size - pg_catalog.pg_sequences.cache_size (Column)
calls - pg_catalog.pg_stat_user_functions.calls (Column)
castcontext - pg_catalog.pg_cast.castcontext (Column)
castfunc - pg_catalog.pg_cast.castfunc (Column)

--------------

select o.id, a, b, c, | from public.one o join public.two on o.id = t.id;

Results:
d - public.two.d (Column)
e - public.two.e (Column)
id - public.two.id (Column)
o.z - public.one.z (Column)
o.a - public.one.a (Column)

--------------

select o.id, a, b, c, d| from public.one o join public.two on o.id = t.id;

Results:
d - public.two.d (Column)
id - public.two.id (Column)
data - pg_catalog.pg_largeobject.data (Column)
data_type - pg_catalog.pg_sequences.data_type (Column)
database - pg_catalog.pg_hba_file_rules.database (Column)

--------------

select o.id, a, b, c, d, | from public.one o join public.two on o.id = t.id;

Results:
e - public.two.e (Column)
id - public.two.id (Column)
o.z - public.one.z (Column)
o.a - public.one.a (Column)
o.b - public.one.b (Column)

--------------

select o.id, a, b, c, d, e| from public.one o join public.two on o.id = t.id;

Results:
e - public.two.e (Column)
elem_count_histogram - pg_catalog.pg_stats.elem_count_histogram (Column)
encoding - pg_catalog.pg_database.encoding (Column)
encrypted - pg_catalog.pg_stat_gssapi.encrypted (Column)
enforced - information_schema.table_constraints.enforced (Column)

--------------

select o.id, a, b, c, d, e, | from public.one o join public.two on o.id = t.id;
**Should have high priority of id of table two, but not one, since it's already mentioned.**

Results:
id - public.two.id (Column)
o.z - public.one.z (Column)
o.a - public.one.a (Column)
o.b - public.one.b (Column)
c - public.two.c (Column)

--------------

select o.id, a, b, c, d, e, z | from public.one o join public.two on o.id = t.id;




***Case 2:***

s| from public.one o join public.two on o.id = t.id;
select | from public.one o join public.two on o.id = t.id;

Results:
o.a - public.one.a (Column)
o.b - public.one.b (Column)
c - public.two.c (Column)
d - public.two.d (Column)
e - public.two.e (Column)

--------------

select i| from public.one o join public.two on o.id = t.id;

Results:
id - public.two.id (Column)
ident - pg_catalog.pg_backend_memory_contexts.ident (Column)
identity_cycle - information_schema.columns.identity_cycle (Column)
identity_generation - information_schema.columns.identity_generation (Column)
identity_increment - information_schema.columns.identity_increment (Column)

--------------

select id, | from public.one o join public.two on o.id = t.id;

Results:
o.a - public.one.a (Column)
o.b - public.one.b (Column)
c - public.two.c (Column)
d - public.two.d (Column)
e - public.two.e (Column)

--------------

select id, a| from public.one o join public.two on o.id = t.id;

Results:
o.a - public.one.a (Column)
abbrev - pg_catalog.pg_timezone_abbrevs.abbrev (Column)
action_condition - information_schema.triggers.action_condition (Column)
action_order - information_schema.triggers.action_order (Column)
action_orientation - information_schema.triggers.action_orientation (Column)

--------------

select id, a, | from public.one o join public.two on o.id = t.id;

Results:
o.b - public.one.b (Column)
c - public.two.c (Column)
d - public.two.d (Column)
e - public.two.e (Column)
o.z - public.one.z (Column)

--------------

select id, a, b| from public.one o join public.two on o.id = t.id;

Results:
o.b - public.one.b (Column)
backend_start - pg_catalog.pg_stat_activity.backend_start (Column)
backend_type - pg_catalog.pg_stat_activity.backend_type (Column)
backend_xid - pg_catalog.pg_stat_activity.backend_xid (Column)
backend_xmin - pg_catalog.pg_stat_activity.backend_xmin (Column)

--------------

select id, a, b, | from public.one o join public.two on o.id = t.id;

Results:
c - public.two.c (Column)
d - public.two.d (Column)
e - public.two.e (Column)
o.z - public.one.z (Column)
o.a - public.one.a (Column)

--------------

select id, a, b, c| from public.one o join public.two on o.id = t.id;

Results:
c - public.two.c (Column)
cache_size - pg_catalog.pg_sequences.cache_size (Column)
calls - pg_catalog.pg_stat_user_functions.calls (Column)
castcontext - pg_catalog.pg_cast.castcontext (Column)
castfunc - pg_catalog.pg_cast.castfunc (Column)

--------------

select id, a, b, c, | from public.one o join public.two on o.id = t.id;

Results:
d - public.two.d (Column)
e - public.two.e (Column)
o.z - public.one.z (Column)
o.a - public.one.a (Column)
o.b - public.one.b (Column)

--------------

select id, a, b, c, d| from public.one o join public.two on o.id = t.id;

Results:
d - public.two.d (Column)
id - public.two.id (Column)
data - pg_catalog.pg_largeobject.data (Column)
data_type - pg_catalog.pg_sequences.data_type (Column)
database - pg_catalog.pg_hba_file_rules.database (Column)

--------------

select id, a, b, c, d, | from public.one o join public.two on o.id = t.id;

Results:
e - public.two.e (Column)
o.z - public.one.z (Column)
o.a - public.one.a (Column)
o.b - public.one.b (Column)
c - public.two.c (Column)

--------------

select id, a, b, c, d, e| from public.one o join public.two on o.id = t.id;

Results:
e - public.two.e (Column)
elem_count_histogram - pg_catalog.pg_stats.elem_count_histogram (Column)
encoding - pg_catalog.pg_database.encoding (Column)
encrypted - pg_catalog.pg_stat_gssapi.encrypted (Column)
enforced - information_schema.table_constraints.enforced (Column)

--------------

select id, a, b, c, d, e, | from public.one o join public.two on o.id = t.id;
**`id` could be from both tables, so both priorities are lowered.**

Results:
o.z - public.one.z (Column)
o.a - public.one.a (Column)
o.b - public.one.b (Column)
c - public.two.c (Column)
d - public.two.d (Column)

--------------

select id, a, b, c, d, e, z | from public.one o join public.two on o.id = t.id;
